Implement practice app for session 1

--- a/samples/makefile
+++ b/samples/makefile
@@ -1,8 +1,12 @@
 all: s01
 
-s01:
+s01_sample:
 	gcc -c sys_info.c
 	gcc -o sys_info sys_info.o
 
+s01_practice:
+	gcc -c process_info.c
+	gcc -o process_info process_info.o
+
 clean:
-	rm -f *.o sys_info
+	rm -f *.o process_info sys_info
