Rename make targets

--- a/samples/makefile
+++ b/samples/makefile
@@ -1,12 +1,16 @@
-all: s01
+all: sys_info
 
-s01_sample:
+sys_info:
 	gcc -c sys_info.c
 	gcc -o sys_info sys_info.o
 
-s01_practice:
+process_info:
 	gcc -c process_info.c
 	gcc -o process_info process_info.o
 
+mul:
+	gcc -c mul.c
+	gcc -o mul mul.o -Wl,-Map=mul.map,--cref
+
 clean:
-	rm -f *.o process_info sys_info
+	rm -f *.o *.map process_info sys_info mul
