Create sample app for session 2

--- a/samples/makefile
+++ b/samples/makefile
@@ -1,16 +1,16 @@
 all: sys_info
 
-sys_info:
+sys_info: sys_info.c
 	gcc -c sys_info.c
 	gcc -o sys_info sys_info.o
 
-process_info:
+process_info: process_info.c
 	gcc -c process_info.c
 	gcc -o process_info process_info.o
 
-mul:
-	gcc -c mul.c
-	gcc -o mul mul.o -Wl,-Map=mul.map,--cref
+memory: memory.c
+	gcc -c memory.c
+	gcc -o memory memory.o -Wl,-Map=memory.map,--cref
 
 clean:
-	rm -f *.o *.map process_info sys_info mul
+	rm -f *.o *.map process_info sys_info mul memory
